<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bg1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/micro_margin"
        android:background="@drawable/header_shape_1"
        android:elevation="1dp"
        android:padding="@dimen/micro_margin"
        android:text="@string/Model"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/micro_margin"
        android:padding="@dimen/micro_margin"
        android:text="@string/ProductDesc"
        android:textSize="16sp"
        tools:text="@string/Desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/micro_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:padding="@dimen/micro_margin"
            android:text="@string/ProductAmount"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:padding="@dimen/micro_margin"
            android:text="@string/ProductReturn"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>