<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_5"
    android:gravity="center"
    tools:context="com.mist.it.pod_nk.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/Gainsboro2"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/mini_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgMALogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            android:contentDescription="@string/Logo"
            android:padding="@dimen/margin"
            app:srcCompat="@drawable/htslogo" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            android:gravity="center"
            android:text="@string/Login"
            android:textSize="@dimen/text_h1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtMAUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtMAPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnMALogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/mini_margin"
            android:layout_marginTop="20dp"
            android:background="@drawable/silver_button"
            android:text="@string/Login"
            android:textSize="18sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>