<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_5"
    tools:context="com.mist.it.pod_nk.DetailJobActivity">

    <LinearLayout
        android:id="@+id/linDJATop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/mini_margin"
        android:background="@color/Cornsilk2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDJAStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            android:text="@string/Store"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDJAArrivalTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            android:text="@string/ArrivalTime"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDJADate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            android:text="@string/Date"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/lisDJAInvoiceList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linDJABottom"
        android:layout_below="@+id/linDJATop"
        android:layout_margin="@dimen/mini_margin"
        android:background="@color/Cornsilk2" />

    <LinearLayout
        android:id="@+id/linDJABottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/mini_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgDJAOne"
                android:layout_width="@dimen/picture_width"
                android:layout_height="@dimen/picture_height"
                android:layout_margin="@dimen/mini_margin"
                android:padding="@dimen/nano_margin"
                app:srcCompat="@drawable/camera" />

            <ImageView
                android:id="@+id/imgDJATwo"
                android:layout_width="@dimen/picture_width"
                android:layout_height="@dimen/picture_height"
                android:layout_margin="@dimen/mini_margin"
                android:padding="@dimen/nano_margin"
                app:srcCompat="@drawable/camera" />

            <ImageView
                android:id="@+id/imgDJAThree"
                android:layout_width="@dimen/picture_width"
                android:layout_height="@dimen/picture_height"
                android:layout_margin="@dimen/mini_margin"
                android:padding="@dimen/nano_margin"
                app:srcCompat="@drawable/camera" />

            <ImageView
                android:id="@+id/imgDJAFour"
                android:layout_width="@dimen/picture_width"
                android:layout_height="@dimen/picture_height"
                android:layout_margin="@dimen/mini_margin"
                android:padding="@dimen/nano_margin"
                app:srcCompat="@drawable/camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/mini_margin">

            <Button
                android:id="@+id/btnDJAArrive"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/micro_margin"
                android:layout_weight="1"
                android:background="@drawable/goldenrod_button"
                android:text="@string/Arrival"
                android:textSize="@dimen/text_h2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDJABack"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/micro_margin"
                android:layout_weight="1"
                android:background="@drawable/silver_button"
                android:text="@string/Back"
                android:textSize="@dimen/text_h2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDJASavePic"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/micro_margin"
                android:layout_weight="1"
                android:background="@drawable/plum_button"
                android:text="@string/SavePicture"
                android:textSize="@dimen/text_h2"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/mini_margin">

            <Button
                android:id="@+id/btnDJASignature"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/micro_margin"
                android:layout_weight="1"
                android:background="@drawable/turquoise_button"
                android:text="@string/Signature"
                android:textSize="@dimen/text_h2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDJAConfirm"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/micro_margin"
                android:layout_weight="1"
                android:background="@drawable/red_button"
                android:text="@string/Confirm"
                android:textColor="@color/GhostWhite"
                android:textSize="@dimen/text_h2"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>